--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -45,5 +45,13 @@ body { @apply bg-brandBackground text-brandText; }
   border-radius: 0.5rem 0.5rem 0 0 !important;
   background-color: rgb(248 250 252) !important; /* bg-slate-50 */
 }
-
-
+.ql-editor ol li::before {
+  content: "";
+}
+.ql-editor ol li[data-list="ordered"]::before {
+  content: counter(list-0, decimal) ". ";
+}
+.ql-editor ol li[data-list="bullet"]::before {
+  content: '\2022'; /* The Unicode character for a bullet point */
+  margin-right: 0.5em; /* Add some space between the bullet and the text */
+}
